--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
     "font-awesome": "4.7.0",
     "ionicons": "4.5.5",
     "jquery": "3.3.1",
-    "office-map": "1.0.30",
+    "office-map": "1.0.31",
     "pareto-chart": "1.0.21",
     "radium": "0.25.1",
     "react": "16.8.4",
     "react-addons-css-transition-group": "15.6.2",
     "react-animations": "1.0.0",
+    "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "2.7.4",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
