--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "font-awesome": "4.7.0",
     "ionicons": "4.5.5",
     "jquery": "3.3.1",
-    "office-map": "1.0.44",
+    "office-map": "1.0.48",
     "pareto-chart": "1.0.21",
     "radium": "0.25.1",
     "react": "16.8.4",
@@ -21,6 +21,7 @@
     "react-animations": "1.0.0",
     "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "2.7.4",
+    "react-datepicker": "2.4.0",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-redux-toastr": "7.4.8",
