--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,13 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "admin-lte": "2.4.10",
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "chart.js": "2.8.0",
     "fishbone-chart": "1.0.22",
     "font-awesome": "4.7.0",
     "ionicons": "4.5.6",
     "jquery": "3.4.1",
-    "office-map": "1.0.79",
+    "office-map": "1.0.80",
     "pareto-chart": "1.0.21",
     "radium": "0.25.1",
     "react": "16.8.4",
